updated modal scrollbar to avoid duplication and adjusting project modal function to allow for headers

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -316,6 +316,10 @@
   /* Black w/ opacity */
 }
 
+.modal::-webkit-scrollbar {
+  display: none;
+}
+
 /* Modal Content (Image) */
 .modal-content {
   margin: auto;
